# rusty-checkers

./: Cargo.toml  README.md
src/: board.rs  game.rs  lib.rs
