[package]
name = "rusty-checkers"
version = "0.1.0"
authors = ["Jeff White <thejeffwhite@gmail.com>"]
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mut_static = "5.0.0"
lazy_static = "1.0.2"